# IntelliLog-AI

./: .coveragerc  .dockerignore  .env.docker  .env.example  .env.insights.template  .env.prod.example  .gitignore  AGENT_DELIVERY_SUMMARY.md  AGENT_SYSTEM_GUIDE.md  API_COMPLETE_CHECKLIST.md  API_DELIVERY_SUMMARY.md  API_DEPLOYMENT_GUIDE.md  ARCHITECTURE_PROD.md  BACKEND_RUNTIME_REPORT.md  CELERY_EXECUTION_DIAGNOSTIC.md  CHANGELOG.md  COPILOT_E2E_VALIDATION_REPORT.md  DATABASE_VALIDATION_REPORT.md  DELIVERABLES.md  DEPLOYMENT.md  Dockerfile  Dockerfile.api  Dockerfile.dashboard  END_TO_END_VALIDATION_REPORT.md  EXECUTIVE_ANALYTICS_VALIDATION.md  FRONTEND_INTEGRATION_REPORT.md  IntelliLog-AI-Analysis_Report.docx  IntelliLog-AI-Production-Blueprint.docx  IntelliLog_AI_Complete_Project_Overview.docx  LIVE_INFRA_VALIDATION_REPORT.md  MANIFEST_PHASE_3.py  METRICS_REPORT.json  METRICS_VALIDATED.md  ML_VALIDATION_REPORT.md  OBSERVABILITY_DELIVERY_SUMMARY.md  OBSERVABILITY_INTEGRATION_GUIDE.md  OBSERVABILITY_QUICKSTART.md  OPTIMIZATION_COMPLETE.md  OPTIMIZATION_SERVICE_GUIDE.md  PHASE3_COMPLETE.md  (+44 more)
_redis_data/: dump.rdb
alembic/: env.py
data/: historical_deliveries.parquet  raw_orders.csv  sample_orders.csv
docs/: ACCOMPLISHMENT_AUDIT.md  AGENT_VALIDATION_REPORT.md  BUGS_AND_IMPROVEMENTS.md  BUSINESS_STRATEGY.md  CONTINUOUS_LEARNING_GUIDE.md  CONTINUOUS_LEARNING_IMPLEMENTATION.md  CONTINUOUS_LEARNING_QUICKSTART.md  DEMO_SEEDING_GUIDE.md  DEPLOYMENT_PRODUCTION.md  DEVELOPER_GUIDE.md  DEVELOPMENT_SUMMARY.md  DISPATCHER_DEMO_REFERENCE.md  DOCUMENTATION_INDEX.md  ML_SYSTEM.md  (+43 more)
(+575 files in other folders)
